# RePosition

./: .dockerignore  .env  .env.example  .gitignore  DEPLOYMENT.md  Dockerfile  LOCAL_SETUP.md  QUICK_START.md  README.md  WINDOWS_SETUP.md  advanced_xgboost_processor.py  apply_improved_ml_to_new_data.py  apply_ml_batch.py  apply_ml_to_all.py  apply_ml_to_updated_data.py  background_updater.py  batch_update_advanced_ml.py  batch_update_all_positions.py  bulk_load_players.py  complete_all_updates.py  complete_clubs_load.py  complete_final_update.py  complete_local_loader.py  complete_ml_processing.py  complete_remaining_ml.py  continuous_update.py  data_loader.py  docker-compose.yml  drizzle.config.ts  efficient_batch_update.py  enhanced_ml_processor.py  export_players_for_training.py  extract_real_features.py  fast_batch_update.py  fast_update_remaining.py  final_complete_update.py  final_update.py  fix-windows-setup.bat  improved_xgboost_processor.py  install-local-dependencies.bat  (+58 more)
attached_assets/: Pasted--Table-public-clubs-Colum-1749457272984_1749457272987.txt  Pasted--usr-bin-env-python3-Load-CSV-data-into-local-PostgreSQL-database-Fixed-for-schema-impor-1749455011472_1749455011475.txt  Pasted-yossi-YossiHadad-MINGW64-OneDrive-PlayerPositionAnalytics-main-python-load-data--1749456569085_1749456569086.txt  Pasted-yossi-YossiHadad-MINGW64-OneDrive-PlayerPositionAnalytics-main-python-load-data--1749457406462_1749457406464.txt  Predict_Player_Positions.py  build_model_CAM_full.py  build_model_CAM_full_1749398348806.py  build_model_CB_full.py  build_model_CDM_full.py  (+34 more)
(+145 files in other folders)
